# openapi.yaml
@@ -729,6 +729,29 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/good_list:
+        get:
+            tags:
+                - App
+            operationId: App_AdminGoodList
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminGoodListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/level_update:
         post:
             tags:
@@ -1718,6 +1741,32 @@ components:
         AdminFeeReply:
             type: object
             properties: {}
+        AdminGoodListReply:
+            type: object
+            properties:
+                Goods:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/AdminGoodListReply_List'
+                count:
+                    type: string
+        AdminGoodListReply_List:
+            type: object
+            properties:
+                id:
+                    type: string
+                createdAt:
+                    type: string
+                name:
+                    type: string
+                detail:
+                    type: string
+                picName:
+                    type: string
+                amount:
+                    type: string
+                status:
+                    type: string
         AdminListReply:
             type: object
             properties:
